--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -3,7 +3,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background: var(--color-black);
+    background: #000;
 
     padding: 1rem 2rem;
 }
@@ -30,10 +30,15 @@
 .app__navbar-links li{
     margin: 0 1rem;
     cursor: pointer;
+    padding: 7px 14px;
+    border-radius: 5em;
+    border: 2px solid black;
 }
 
 .app__navbar-links li:hover{
-    color: var(--color-grey)
+    color: #e100ff;
+    border-radius: 5em;
+    border: 2px solid #e100ff;
 }
 
 .app__navbar-login{
