--- a/src/container/AboutUs/AboutUs.css
+++ b/src/container/AboutUs/AboutUs.css
@@ -2,6 +2,36 @@
     position: relative;
 }
 
+.app__aboutus .headtext__cormorant {
+    font-family: var(--font-base);
+    color: #e100ff;
+    font-weight: 700;
+    letter-spacing: 0.04em;
+    text-transform: capitalize;
+    line-height: 117px;
+    font-size: 65px;
+}
+
+.app__aboutus .custom__button{
+    border: 2px solid #240621;
+    padding: 14px 28px;
+    background-color: #0040ff;
+    font-size: larger;
+    -webkit-text-stroke: #ffffff;
+    -webkit-text-stroke-width:medium;
+    border-radius: 5em;
+    outline-width: 2em;
+    color:rgb(0, 0, 0);
+    cursor: pointer;
+}
+
+.app__aboutus .custom__button:hover {
+    background-color: #000000;
+    color:#0040ff;
+    border: 2px solid #0040ff;
+    -webkit-text-stroke:thin;
+}
+
 .app__aboutus-overlay {
     
     inset: -30%;
@@ -59,7 +89,7 @@
 .app__aboutus-content_about p,
 .app__aboutus-content_history p {
     margin: 2rem 0;
-    color: var(--color-grey);
+    color: var(--color-white);
 }
 
 @media screen and (min-width: 2000px) {
