--- a/src/container/Menu/SpecialMenu.css
+++ b/src/container/Menu/SpecialMenu.css
@@ -1,6 +1,36 @@
 .app__specialMenu {
     flex-direction: column;
-    background: var(--color-black);
+    background: #000000;
+}
+
+.app__specialMenu .headtext__cormorant {
+    font-family: var(--font-base);
+    color: #e100ff;
+    font-weight: 700;
+    letter-spacing: 0.04em;
+    text-transform: capitalize;
+    line-height: 117px;
+    font-size: 65px;
+}
+
+.app__specialMenu .custom__button{
+    border: 2px solid #240621;
+    padding: 14px 28px;
+    background-color: #e100ff;
+    font-size: larger;
+    -webkit-text-stroke: #ffffff;
+    -webkit-text-stroke-width:medium;
+    border-radius: 5em;
+    outline-width: 2em;
+    color:rgb(0, 0, 0);
+    cursor: pointer;
+}
+
+.app__specialMenu .custom__button:hover {
+    background-color: #000000;
+    color:#e100ff;
+    border: 2px solid #e100ff;
+    -webkit-text-stroke:thin;
 }
 
 .app__specialMenu-title {
@@ -21,10 +51,10 @@
 .app__specialMenu-menu_heading {
     font-family: var(--font-base);
     font-weight: 600;
-    font-size: 45px;
+    font-size: 55px;
     line-height: 58.5px;
     letter-spacing: 0.04em;
-    color: var(--color-white);
+    color: #0040ff;
 }
 
 .app__specialMenu-menu_wine,
@@ -47,7 +77,6 @@
 .app__specialMenu_menu_items {
     display: flex;
     flex-direction: column;
-
     margin: 2rem 0;
     width: 100%;
 }
