--- a/src/components/Register/RegisterStyles.css
+++ b/src/components/Register/RegisterStyles.css
@@ -1,37 +1,223 @@
-.register {
-    width: 100%;
+.app__register{
+	padding: 0;
+	margin: 0;
+	box-sizing: border-box;
+}
+
+.app__register-body{
+    font-family: 'Poppins', sans-serif;
+    overflow: hidden;
+}
+
+.app__register .app__register-body .app__register-wave{
+	position: fixed;
+	bottom: 0;
+	left: 0;
+	height: 100%;
+	z-index: -1;
+}
+
+.app__register .app__register-body .app__register-container{
+    width: 100vw;
     height: 100vh;
-    background: rgba(0,0,0,.4);
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap :7rem;
+    padding: 0 2rem;
+}
+
+.app__register .app__register-body .app__register-container .app__register-img{
+	display: flex;
+    justify-content: flex-end;
+	align-items: center;
+}
+
+.app__register .app__register-body .app__register-container .app__register-register-content{
+	display: flex;
+	justify-content: flex-start;
+	align-items: center;
+	text-align: center;
+}
+
+.app__register .app__register-body .app__register-container .app__register-img img{
+	width: 500px;
+    
+}
+
+.app__register-form{
+	width: 360px;
+}
+
+.app__register .app__register-body .app__register-container .app__register-register-content .app__register-form img{
+    height: 100px;
+}
+
+.app__register-register-content h2{
+	margin: 15px 0;
+	color: #333;
+	text-transform: uppercase;
+	font-size: 2.9rem;
+}
+
+.app__register-register-content .input-div{
+	position: relative;
+    display: grid;
+    grid-template-columns: 7% 93%;
+    margin: 25px 0;
+    padding: 5px 0;
+    border-bottom: 2px solid #d9d9d9;
+}
+
+.app__register-register-content .input-div.one{
+	margin-top: 0;
+}
+
+.i{
+	color: #d9d9d9;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.i i{
+	transition: .3s;
+}
+
+.input-div > div{
     position: relative;
+	height: 45px;
 }
 
-.register:before {
-    content: "";
-    position:absolute;
-    height: 100%;
-    width: 100%;
-    z-index: -1;
+.input-div > div > h5{
+	position: absolute;
+	left: 10px;
+	top: 50%;
+	transform: translateY(-50%);
+	color: #999;
+	font-size: 18px;
+	transition: .3s;
 }
 
-.register .content{
-    position: absolute;
-    top: 30%;
-    width: 50%;
-    left: 0;
-    padding: 1rem;
+.input-div:before, .input-div:after{
+	content: '';
+	position: absolute;
+	bottom: -2px;
+	width: 0%;
+	height: 2px;
+	background-color: #38d39f;
+	transition: .4s;
 }
 
-.register .h2 {
-    color: #f8f8f8;
+.input-div:before{
+	right: 50%;
 }
 
-.register p {
-    color:#f8f8f8;
-    margin: 1rem 0;
+.input-div:after{
+	left: 50%;
 }
 
-@media screen and (max-width:940px) {
-    .register .content {
-        width: 100%;
-    }
+.input-div.focus:before, .input-div.focus:after{
+	width: 50%;
+}
+
+.app__register .input-div.focus > div > h5{
+	top: -5px;
+	font-size: 15px;
+}
+
+.app__register .input-div.focus > .i > i{
+	color: #38d39f;
+}
+
+.app__register .input-div > div > input{
+	position: absolute;
+	left: 0;
+	top: 0;
+	width: 100%;
+	height: 100%;
+	border: none;
+	outline: none;
+	background: none;
+	padding: 0.5rem 0.7rem;
+	font-size: 1.2rem;
+	color: #555;
+	font-family: 'poppins', sans-serif;
+}
+
+.app__register .input-div.pass{
+	margin-bottom: 4px;
+}
+
+.app__register a{
+	display: block;
+	text-align: right;
+	text-decoration: none;
+	color: #999;
+	font-size: 0.9rem;
+	transition: .3s;
+}
+
+.app__register a:hover{
+	color: #38d39f;
+}
+
+.app__register .btn{
+	display: block;
+	width: 100%;
+	height: 50px;
+	border-radius: 25px;
+	outline: none;
+	border: none;
+	background-image: linear-gradient(to right, #32be8f, #38d39f, #32be8f);
+	background-size: 200%;
+	font-size: 1.2rem;
+	color: #fff;
+	font-family: 'Poppins', sans-serif;
+	text-transform: uppercase;
+	margin: 1rem 0;
+	cursor: pointer;
+	transition: .5s;
+}
+.app__register .btn:hover{
+	background-position: right;
+}
+
+
+@media screen and (max-width: 1050px){
+	.app__register-container{
+		grid-gap: 5rem;
+	}
+}
+
+@media screen and (max-width: 1000px){
+	.app__register-form{
+		width: 290px;
+	}
+
+	.app__register-register-content h2{
+        font-size: 2.4rem;
+        margin: 8px 0;
+	}
+
+	.app__register-img img{
+		width: 400px;
+	}
+}
+
+@media screen and (max-width: 900px){
+	.app__register-container{
+		grid-template-columns: 1fr;
+	}
+
+	.app__register-img{
+		display: none;
+	}
+
+	.app__register-wave{
+		display: none;
+	}
+
+	.app__register-register-content{
+		justify-content: center;
+	}
 }
