--- a/src/components/Contact/ContactStyles.css
+++ b/src/components/Contact/ContactStyles.css
@@ -1,37 +1,218 @@
-.contact {
-    width: 100%;
-    height: 100vh;
-    background: rgba(0,0,0,.4);
-    position: relative;
+@import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro);
+.app__contact {
+	background:#2d3b36 url(https://scontent-sea1-1.xx.fbcdn.net/v/t39.30808-6/301697081_471417581665360_440858398707636750_n.jpg?_nc_cat=101&cb=99be929b-3346023f&ccb=1-7&_nc_sid=e3f864&_nc_ohc=PJuDw3Drqf8AX-W-WRx&_nc_ht=scontent-sea1-1.xx&oh=00_AfC0HigE9MYFfUBOugENeuMyqWUSJKJ4pFdYW2IyDXdXDA&oe=649F9513) center center fixed;
+  	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	background-size: cover;
+    padding-top:100px;
+    padding-bottom: 100px;
 }
 
-.contact:before {
-    content: "";
-    position:absolute;
-    height: 100%;
-    width: 100%;
-    z-index: -1;
+.app__contact .app__contact-container .app__contact-content .app__contact-heading {
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+    padding-bottom: 15px;
+    max-width: 530px;
+    height: 50;
+    padding:30px;
+    border: 1px solid rgb(0, 0, 0);
+    -moz-border-radius: 5px;
+    -webkit-border-radius: 5px;
+    border-radius: 5px;
+    -moz-background-clip: padding;
+    -webkit-background-clip: padding-box;
+    background-clip: padding-box;
+    background: rgba(0, 0, 0, 0.753); 
+    -moz-box-shadow: 0 0 13px 3px rgba(0,0,0,.5);
+    -webkit-box-shadow: 0 0 13px 3px rgba(0,0,0,.5);
+    box-shadow: 0 0 13px 3px rgba(0,0,0,.5);
+    overflow:visible; 
+    color: #e100ff;
 }
 
-.contact .content{
-    position: absolute;
-    top: 30%;
-    width: 50%;
-    left: 0;
-    padding: 1rem;
+.app__contact .app__contact-container .app__contact-content .app__contact-form {
+    margin-left:auto;
+    margin-right:auto;
+    width: 425px;
+    height: 425px;
+    padding:30px;
+    border: 1px solid rgba(0,0,0,.2);
+    -moz-border-radius: 5px;
+    -webkit-border-radius: 5px;
+    border-radius: 5px;
+    -moz-background-clip: padding;
+    -webkit-background-clip: padding-box;
+    background-clip: padding-box;
+    background: rgba(0, 0, 0, 0.5); 
+    -moz-box-shadow: 0 0 13px 3px rgba(0,0,0,.5);
+    -webkit-box-shadow: 0 0 13px 3px rgba(0,0,0,.5);
+    box-shadow: 0 0 13px 3px rgba(0,0,0,.5);
+    overflow:visible; 
 }
 
-.contact .h2 {
-    color: #f8f8f8;
+.app__contact .app__contact-container .app__contact-content .app__contact-form textarea{
+	background: rgba(255, 255, 255, 0.4) url(https://cdn-icons-png.flaticon.com/128/2850/2850760.png) no-repeat scroll 16px 16px; 
+    background-size: 25%;
+    background-position: center bottom;
+    width: 365px;
+    height: 140px;
+    border: 1px solid rgba(255,255,255,.6);
+    -moz-border-radius: 4px;
+    -webkit-border-radius: 4px;
+    border-radius: 4px;
+    -moz-background-clip: padding;
+    -webkit-background-clip: padding-box;
+    background-clip: padding-box; 
+    display:block;
+    font-family: 'Source Sans Pro', sans-serif;
+    font-size:18px;
+    color:#ffffff;
+    padding-left:45px;
+    padding-top:12px;
+    margin-bottom:20px;
+    overflow:hidden;
 }
 
-.contact p {
-    color:#f8f8f8;
-    margin: 1rem 0;
+.app__contact .app__contact-container .app__contact-content .app__contact-form input {
+    width: 365px;
+    height: 48px;
+    border: 1px solid rgba(255,255,255,.4);
+    -moz-border-radius: 4px;
+    -webkit-border-radius: 4px;
+    border-radius: 4px;
+    -moz-background-clip: padding;
+    -webkit-background-clip: padding-box;
+    background-clip: padding-box; 
+    display:block;
+    font-family: 'Source Sans Pro', sans-serif;
+    font-size:18px;
+    color:#fff;
+    padding-left:20px;
+    padding-right:20px;
+    margin-bottom:20px;
+    cursor: pointer;
 }
 
-@media screen and (max-width:940px) {
-    .contact .content {
-        width: 100%;
-    }
+.app__contact .app__contact-container .app__contact-content .app__contact-form input[type=submit] {
+    cursor:pointer;
 }
+
+.app__contact .app__contact-container .app__contact-content .app__contact-form input.user_name {
+	background: rgba(255, 255, 255, 0.4) url(http://luismruiz.com/img/gemicon_name.png) no-repeat scroll 16px 16px; 
+	padding-left:45px;
+}
+
+.app__contact .app__contact-container .app__contact-content .app__contact-form input.user_email {
+	background: rgba(255, 255, 255, 0.4) url(http://luismruiz.com/img/gemicon_email.png) no-repeat scroll 16px 20px;
+	padding-left:45px;
+}
+
+.app__contact .app__contact-container .app__contact-content .app__contact-form input.user_message {
+	background: rgba(255, 255, 255, 0.4)  no-repeat scroll 16px 16px;
+	padding-left:45px;
+}
+
+::-webkit-input-placeholder {
+    padding: 7px 14px;
+	color:rgb(0, 0, 0);
+    font-weight: 700;
+}
+
+:-moz-placeholder{ 
+    color: #fff; 
+}
+
+::-moz-placeholder {
+    color: #fff;
+}
+
+:-ms-input-placeholder {  
+	color: #fff; 
+}
+
+.app__contact .app__contact-container .app__contact-content .app__contact-form input:focus { 
+	background-color: rgba(0, 0, 0, 0.2);
+    -moz-box-shadow: 0 0 5px 1px rgba(255,255,255,.5);
+    -webkit-box-shadow: 0 0 5px 1px rgba(255,255,255,.5);
+    box-shadow: 0 0 5px 1px rgba(255,255,255,.5);
+	overflow: hidden; 
+}
+
+.app__contact .app__contact-container .app__contact-content .app__contact-form input:hover {
+    font-weight:700;
+}
+.app__contact .app__contact-container .app__contact-content .app__contact-form input:active {
+    color:#333333;
+}
+
+.app__contact .app__contact-container .app__contact-content .app__contact-form textarea:hover {
+    font-weight:700;
+}
+
+.app__contact .app__contact-container .app__contact-content .app__contact-form textarea:focus { 
+	background-color: rgba(0, 0, 0, 0.5);
+    -moz-box-shadow: 0 0 5px 1px rgba(255,255,255,.5);
+    -webkit-box-shadow: 0 0 5px 1px rgba(255,255,255,.5);
+    box-shadow: 0 0 5px 1px rgba(255,255,255,.5);
+	overflow: hidden; 
+}
+
+.app__contact .app__contact-container .app__contact-content .app__contact-form .app__contact-btn {
+	width: 138px;
+	height: 44px;
+	-moz-border-radius: 4px;
+	-webkit-border-radius: 4px;
+	border-radius: 4px;
+	float:right;
+    border: 1px solid #e100ff;
+    background: rgb(0,0,0);
+    background: -webkit-gradient(linear, left top, left bottom, from(#0a010a), to(#c918ba));
+    background: -webkit-linear-gradient(top, #0a010a, #c918ba);
+    background: -moz-linear-gradient(top, #0a010a, #c918ba);
+    background: -ms-linear-gradient(top, #0a010a, #c918ba);
+    background: -o-linear-gradient(top, #0a010a, #c918ba);
+    background-image: -ms-linear-gradient(top, #0a010a 0%, #c918ba 100%);
+    padding: 10.5px 21px;
+    -webkit-border-radius: 6px;
+    -moz-border-radius: 6px;
+    border-radius: 6px;
+    -webkit-box-shadow: rgba(255,255,255,0.1) 0 1px 0, inset rgba(255, 255, 255, 0.7) 0 1px 0;
+    -moz-box-shadow: rgba(255,255,255,0.1) 0 1px 0, inset rgba(255,255,255,0.7) 0 1px 0;
+    box-shadow: rgba(255,255,255,0.1) 0 1px 0, inset rgba(255,255,255,0.7) 0 1px 0;
+    text-shadow: #333333 0 1px 0;
+    color: #e100ff;
+}
+
+.app__contact .app__contact-container .app__contact-content .app__contact-form .app__contact-btn:hover {
+    border: 1px solid #253737;
+    text-shadow: rgb(237, 233, 238) 0.5px 0px;
+    background-color: #e100ff;
+    background-color: -webkit-gradient(linear, left top, left bottom, from(#0a010a), to(#c918ba));
+    background-color: -webkit-linear-gradient(top, #0a010a, #c918ba);
+    background-color: -moz-linear-gradient(top, #0a010a, #c918ba);
+    background-color: -ms-linear-gradient(top, #0a010a, #c918ba);
+    background-color: -o-linear-gradient(top, #0a010a, #c918ba);
+    background-image: -ms-linear-gradient(top, #0a010a 0%, #c918ba 100%);
+    color: black;
+ }
+
+ .app__contact .app__contact-container .app__contact-content .app__contact-form .app__contact-btn:active {
+    margin-top:1px;
+    text-shadow: #333333 0 -1px 0;
+    border: 1px solid #333333;
+    background: #ffCC00;
+    background: -webkit-gradient(linear, left top, left bottom, from(#ffCC00), to(#ff6600));
+    background: -webkit-linear-gradient(top, #ffcc00, #ff6600);
+    background: -moz-linear-gradient(top, #ffcc00, #ff6600);
+    background: -ms-linear-gradient(top, #ffcc00, #ff6600);
+    background: -o-linear-gradient(top, #ffcc00, #ff6600);
+    background-image: -ms-linear-gradient(top, #ffcc00 0%, #ff6600 100%);
+    color: #fff;
+    -webkit-box-shadow: rgba(255,255,255,0) 0 1px 0, inset rgba(255,255,255,0.7) 0 1px 0;
+    -moz-box-shadow: rgba(255,255,255,0) 0 1px 0, inset rgba(255,255,255,0.7) 0 1px 0;
+    box-shadow: rgba(255,255,255,0) 0 1px 0, inset rgba(255,255,255,0.7) 0 1px 0;
+   }
+
+
